// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div
  class="css-1ajnpvg-className-className"
>
  Box
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div
  class="my-extra-class css-1ajnpvg-className-className"
>
  Box
</div>
`;

exports[`should have correct styles should render correct padding and margin values 1`] = `
.emotion-0 {
  margin-left: 2rem;
  padding-right: 0.5rem;
}

<div
  class="emotion-0"
>
  Box
</div>
`;

exports[`should have correct styles should render correct padding and margin values and apply polymorphic props 1`] = `
.emotion-0 {
  margin-bottom: 4rem;
  padding: 1rem;
}

<a
  class="emotion-0"
  href="https://contentful.com"
>
  Link to Contentful
</a>
`;
